<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MyMessage">

    <EditText android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:padding="10dip"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_button"
        android:onClick="signMessage"/>

    <EditText android:id="@+id/verify_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_message"
        android:padding="10dip"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_button"
        android:onClick="verifyMessage"/>


    <TextView
        android:id="@+id/result_text"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_text_default" />

</LinearLayout>
